<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/accountFragment"
            android:title="@string/account"
            android:icon="@drawable/ic_human"/>
    <item
            android:id="@+id/homeFragment"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
    <item
            android:id="@+id/favouriteFragment"
            android:title="@string/favourite"
            android:icon="@drawable/ic_menu_fav"/>
    <item android:id="@+id/orderHistoryFragment"
          android:title="@string/order_history"
          android:icon="@drawable/ic_history"/>

    <item android:id="@+id/menu_setting"
          android:title="@string/setting"
          android:icon="@drawable/ic_setting"/>
</menu>