<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/giftLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:foreground="@drawable/gift_row_click_ripple">

        <com.google.android.material.button.MaterialButton
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:id="@+id/btnOrder"
                android:insetTop="0dp"
                android:padding="0dp"
                app:icon="@drawable/ic_add"
                app:iconGravity="textStart"
                app:layout_constraintTop_toTopOf="parent"
                android:textAllCaps="true"
                app:iconSize="30dp"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:background="@drawable/available_text_design"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/days_one"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
        <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:id="@+id/btnFavourite"
                android:textStyle="bold"
                android:clickable="true"
                android:gravity="center"
                android:drawablePadding="5dp"
                android:drawableEnd="@drawable/ic_star"
                android:text="@string/_5_5"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"
                app:rippleColor="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/favourite"
                android:focusable="true"
                app:layout_constraintEnd_toStartOf="@+id/btnOrder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/ivItemImage"
                app:layout_constraintTop_toBottomOf="@+id/btnOrder"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:minHeight="100dp"
                android:maxHeight="120dp"
                android:contentDescription="@string/gift_image"/>
        <TextView
                android:text="@string/item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvItemName"
                android:gravity="center_vertical"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/ivItemImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/belgrano"/>
        <com.google.android.material.textview.MaterialTextView
                android:text="@string/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvItemPrice"
                android:textColor="@color/price_color"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:textSize="15sp"
                android:fontFamily="@font/aldrich"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>